--- a/pom.xml
+++ b/pom.xml
@@ -8,25 +8,20 @@
         <version>2.7.10</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>br.com</groupId>
+    <groupId>br.com.university</groupId>
     <artifactId>university</artifactId>
     <version>1.0.0</version>
     <packaging>war</packaging>
     <name>university</name>
     <description>University</description>
     <properties>
-        <java.version>11</java.version>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jersey</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
