--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/universitydb
 spring.datasource.username=root
 spring.datasource.password=374867
 
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect  
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
 spring.jpa.database=MYSQL
+
+
 
